added README file, added more test to test.js

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <!---===============END OF HEAD CODE BLOCK====================-->
 <div class="card m-2">
     <div class="card-header">
-        <h1>alex</h1>
+        <h1>Alex B</h1>
         <hr>
         <h2><i class="fas fa-briefcase"></i> Manager</h2>
     </div>
     <div class= "card-body">
             <div class="list-group">
-                <p class="list-group-item list-group-item-action list-group-item-dark">ID: <span>123</span></p>
-                <p class="list-group-item list-group-item-action list-group-item-dark">Email: <span>alex@gmail.com</span></p>
+                <p class="list-group-item list-group-item-action list-group-item-dark">ID: <span>726345</span></p>
+                <p class="list-group-item list-group-item-action list-group-item-dark">Email: <span><a href="mailto:alexb@gmail.com">alexb@gmail.com</a></span></p>
                 <p class="list-group-item list-group-item-action list-group-item-dark">Office Number: <span>1B</span></p>
             </div>
     </div>
@@ -40,19 +40,34 @@
 <!---===============END OF MANAGER CODE BLOCK====================-->
  <div class="card m-2">
     <div class="card-header">
-        <h1>ben</h1>
+        <h1>Ben V</h1>
         <hr>
         <h2><i class="fas fa-screwdriver"></i> Engineer</h2>
     </div>
     <div class= "card-body">
             <div class="list-group">
-                <p class="list-group-item list-group-item-action list-group-item-dark">ID: <span>456</span></p>
-                <p class="list-group-item list-group-item-action list-group-item-dark">Email: <span>ben@gmail.com</span></p>
-                <p class="list-group-item list-group-item-action list-group-item-dark">GitHub: <span>githut.com</span></p>
+                <p class="list-group-item list-group-item-action list-group-item-dark">ID: <span>27835</span></p>
+                <p class="list-group-item list-group-item-action list-group-item-dark">Email: <span><a href="mailto:benv@gmail.com">benv@gmail.com</a></span></p>
+                <p class="list-group-item list-group-item-action list-group-item-dark">GitHub: <span><a href="https://github.com/konnyph">konnyph</a></span></p>
             </div>
     </div>
 </div>
 <!---===============END OF ENGINEER CODE BLOCK====================-->
+<div class="card m-2">
+    <div class="card-header">
+        <h1>Cindy L</h1>
+        <hr>
+        <h2><i class="fas fa-university"></i> Intern</h2>
+    </div>
+    <div class= "card-body">
+            <div class="list-group">
+                <p class="list-group-item list-group-item-action list-group-item-dark">ID: <span>89347569</span></p>
+                <p class="list-group-item list-group-item-action list-group-item-dark">Email: <span><a href="mailto:cindyl@gmail.com">cindyl@gmail.com</a></span></p>
+                <p class="list-group-item list-group-item-action list-group-item-dark">GitHub: <span>Georgia Tech University</span></p>
+            </div>
+    </div>
+</div>
+<!---===============END OF INTERN CODE BLOCK====================-->
 </div>
     </div>
 </div>  
